# cpp_projects

./: .gitignore  LICENSE  README.md
cpp_projects/basics/: files.cpp  io.cpp  taxation.cpp  taxation.hpp
cpp_projects/editor/: CMakeLists.txt  edit.cpp  editor.cpp  editor.hpp  editor_test.cpp  short.txt
cpp_projects/simulator/: circuit.cpp  circuit.hpp  circuit_test.cpp  simulate.cpp
cpp_projects/structures/: linked_list.cpp  linked_list.hpp  linked_list_test.cpp
cpp_projects/time/: time.cpp  time.hpp  time_test.cpp
data/: poem.txt
